--- a/index.html
+++ b/index.html
@@ -1,23 +1,79 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
 
 <head>
-  <meta charset="utf-8">
-  <title></title>
+  <Meta charset="utf-8">
+  <title>Jahongir Husanov</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
+  <img id="proPhoto" src="professional.jpg" alt="Jahongir's professional photo">
+  <h1>Jahongir Husanov</h1>
+  <p>Software Developer student at <em>Galvanize Hack Reactor</em></p>
+  <p>Currently gaining the skills needed to earn my first opportunity to be a software developer!</p>
+  <hr>
+  <h3>Education</h3>
+  <ul>
+    <li>Galvanize Hack Reactor
+      <ul>
+        <li>Software Engineering Immersive Bootcamp</li>
+        <li>Graduating Jan 2020</li>
+      </ul>
+    </li>
+    <li>Western Governors University
+      <ul>
+        <li>Bachelors in Computer Science</li>
+        <li>Expected Graduation Jan 2021</li>
+      </ul>
+    </li>
+    <li>University of South Florida
+      <ul>
+        <li>Bachelors in Economics</li>
+        <li>Graduated May 2016</li>
+      </ul>
+    </li>
+  </ul>
+  <h3>Work Experience</h3>
+  <table>
+    <thead>
+      <th>Dates</th>
+      <th>Work</th>
+    </thead>
+    <tbody>
+      <tr>
+        <td>2019</td>
+        <td>IT Technician at Principle Business Enterprises</td>
+      </tr>
+      <tr>
+        <td>2016 - 2018</td>
+        <td>Mortgage Loan Officer at PHH Mortgage and PNC Bank</td>
+      </tr>
+    </tbody>
+  </table>
+
+  <hr>
+  <h3>My Skills</h3>
+  <table>
+    <tr>
+      <td>Javascript</td>
+      <td> ⭐️⭐️⭐️⭐️⭐️ </td>
+    </tr>
+    <tr>
+      <td>Web Development</td>
+      <td>⭐️⭐️⭐️</td>
+    </tr>
+  </table>
+  <hr>
+
+  <p>
+
+    <a href="hobbies.html">My Hobbies</a>
+    <a href="ContactMe.html">Contact Me!</a>
+  </p>
 
 
-  <form class="" action="mailto:husanov.y.jahongir@gmail.com" method="post">
-    <label>Name:</label>
-    <input type="text" name="" value=""><br>
-    <label>Email:</label>
-    <input type="email" name="" value=""><br>
-    <label>Message:</label><br>
-    <textarea name="name" rows="10" cols="30"></textarea><br>
-    <input type="submit" name="">
-  </form>
 </body>
 
 </html>
+
