--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <Meta charset="utf-8">
   <title>Jahongir Husanov</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
+
 </head>
 
 <body>
@@ -76,4 +77,3 @@
 </body>
 
 </html>
-
