--- a/contactMe.html
+++ b/contactMe.html
@@ -2,8 +2,10 @@
 <html>
 
 <head>
-  <title>Contact Me</title>
   <meta charset="utf-8">
+  <title>Contact Me</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+
 </head>
 
 <body>
@@ -30,4 +32,3 @@
   <input type="submit">
 </form>
 </body>
-
