--- a/hobbies.html
+++ b/hobbies.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+<meta charset = "utf-8">
         <title>My hobbies</title>
-        <meta charset = "utf-8">
+          <link rel="stylesheet" type="text/css" href="css/styles.css">
+
     </head>
     <body>
 <ul>
