--- a/index.html
+++ b/index.html
@@ -1,77 +1,66 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
 
 <head>
-  <Meta charset="utf-8">
-  <title>Jahongir Husanov</title>
-  <link rel="stylesheet" type="text/css" href="css/styles.css">
-
+  <meta charset="utf-8">
+  <title>Jahongir Husanov - SDET</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300;0,400;1,300&family=Montserrat:wght@100&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <img id="proPhoto" src="professional.jpg" alt="Jahongir's professional photo">
-  <h1>Jahongir Husanov</h1>
-  <p>Software Developer student at <em>Galvanize Hack Reactor</em></p>
-  <p>Currently gaining the skills needed to earn my first opportunity to be a software developer!</p>
-  <hr>
-  <h3>Education</h3>
-  <ul>
-    <li>Galvanize Hack Reactor
-      <ul>
-        <li>Software Engineering Immersive Bootcamp</li>
-        <li>Graduating Jan 2020</li>
-      </ul>
-    </li>
-    <li>Western Governors University
-      <ul>
-        <li>Bachelors in Computer Science</li>
-        <li>Expected Graduation Jan 2021</li>
-      </ul>
-    </li>
-    <li>University of South Florida
-      <ul>
-        <li>Bachelors in Economics</li>
-        <li>Graduated May 2016</li>
-      </ul>
-    </li>
-  </ul>
-  <h3>Work Experience</h3>
-  <table>
-    <thead>
-      <th>Dates</th>
-      <th>Work</th>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2019</td>
-        <td>IT Technician at Principle Business Enterprises</td>
-      </tr>
-      <tr>
-        <td>2016 - 2018</td>
-        <td>Mortgage Loan Officer at PHH Mortgage and PNC Bank</td>
-      </tr>
-    </tbody>
-  </table>
 
-  <hr>
-  <h3>My Skills</h3>
-  <table>
-    <tr>
-      <td>Javascript</td>
-      <td> ⭐️⭐️⭐️⭐️⭐️ </td>
-    </tr>
-    <tr>
-      <td>Web Development</td>
-      <td>⭐️⭐️⭐️</td>
-    </tr>
-  </table>
-  <hr>
 
-  <p>
+  <div class="top-container">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud-png">
+    <h1>I'm Jahongir</h1>
+    <h2 class="title">I am Jr. Developer / Sr. SDET</h2>
+    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-png">
+    <img src="images/mountain.png" alt="mountain-png">
+  </div>
 
-    <a href="hobbies.html">My Hobbies</a>
-    <a href="ContactMe.html">Contact Me!</a>
-  </p>
+
+  <div class="middle-container">
+    <div class="profile">
+      <img class="profile-pic" src="images/profile.png" alt="profile picture">
+      <h2>SUMMARY:</h2>
+      <p class="intro">Highly skilled and result oriented Software Development Engineer in Test with 7+ years of IT experience through Functional and Automation Testing of web-based and desktop-based applications and using Selenium, TestNG, Cucumber, UFT, POSTMAN, TOSCA, API and Rally/JIRA in domains of Banking, Finance, Logistics and Healthcare.</p>
+    </div>
+    <hr>
+
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="dev-img" src="images/skil-test.svg" alt="">
+        <h3>SDET</h3>
+        <p>I just have started front end development, hope soon i should be able to do some projects. I just have started front end development, hope soon i should be able to do some projects. I just have started front end development, hope soon i should be able to do some projects.</p>
+      </div>
+      <div class="skill-row">
+        <img class="sdet-img" src="images/skil-dev.png" alt="">
+        <h3>Jr level Front-End Developer</h3>
+        <p>More than 6 yrs experience with Selenium, UFT, TOSCA, API and others. More than 6 yrs experience with Selenium, UFT, TOSCA, API and others. More than 6 yrs experience with Selenium, UFT, TOSCA, API and others.</p>
+      </div>
+    </div>
+
+    <hr>
+
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>If you love coding as much as I do.</h3>
+      <p class="contact-message">If you have any job oportunities related to web development or SDET, please reach out to me.</p>
+      <a class="btn" href="mailto:husanov.y.jahongir@email.com">CONTACT ME</a>
+    </div>
+  </div>
+
+
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/in/jahongir-husanov-820a1a159/">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/">Twitter</a>
+    <a class="footer-link" href="https://www.facebook.com/jakhongir87/">Facebook</a>
+    <p class="copyright">© 2020 Jahongir Husanov.</p>
+  </div>
+
 
 
 </body>
